--- a/main.html
+++ b/main.html
@@ -3,11 +3,31 @@
 <html>
 
 <head>
+	    <title>Submit Button</title>
+    <style>
+        #btn {
+            background-color: black;
+            color: white;
+            border-radius: 5px;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s, border-radius 0.3s;
+        }
+
+        #btn:hover {
+            background-color: yellow;
+            color: black;
+            border-radius: 30px;
+        }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <button id="btn" type="submit">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
